--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="chat-container">
         <div class="chat-header">
             <img src="mm-logo.jpg" alt="" style="height: 55px;width: 50px;">
-            <h1 style="padding-left: 10px;">Mounika's AI</h1>
+            <h1 style="padding-left: 10px;">Mouni's AI</h1>
         </div>
         <div class="chat-messages" id="chat-messages"></div>
         <div class="chat-input-container">
